# cortex-db

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  env.example
.claude/: CLAUDE.md
.github/workflows/: docker-publish.yml
clients/python/: .gitignore  README.md  pyproject.toml  test_sdk.py
clients/python/cortexdb/: __init__.py  client.py  collections.py  connection_string.py  exceptions.py  http_client.py  models.py  records.py
clients/python/examples/: file_upload.py  quickstart.py
clients/python/tests/: test_client.py
clients/typescript/: .eslintrc.json  .gitignore  .npmignore  CHANGELOG.md  LICENSE  PUBLISH.md  README.md  TODO.md  package-lock.json  package.json
docs/: api-reference.md  cortexdb.md  quickstart.md  schema-reference.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
gateway/: .dockerignore  DOCLING_INTEGRATION.md  Dockerfile  main.py  requirements.txt
gateway/api/: api_keys.py  collections.py  databases.py  files.py  health.py  providers.py  records.py  search.py
gateway/core/: auth_cache.py  bootstrap.py  chunking.py  collections.py  databases.py  docling_processor.py  embeddings.py  migrations.py  minio.py  pdf_processor.py  postgres.py  providers.py  qdrant.py  records.py  schema.py  (+2 more)
playground/: .gitignore  README.md  backend_example.py  create_test_pdf.py  helpers.py  interactive.py  run.sh  test_basic.py  test_docling.py  test_files.py  test_filters.py  test_pdf_with_images.py  test_rag.py  test_search.py  test_with_provider.py
schemas/: faqs.yml  jurisprudencia.yml  products.yml
scripts/: install.sh
(+61 files in other folders)
