[tool.poetry]
name = "cortexdb"
version = "0.1.1"
description = "Official Python SDK for CortexDB - Multi-modal RAG Platform"
authors = ["CortexDB Team"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yourusername/cortexdb"
repository = "https://github.com/yourusername/cortexdb"
documentation = "https://github.com/yourusername/cortexdb/tree/main/clients/python"
keywords = ["database", "vector", "rag", "multimodal", "embeddings", "search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.27.0"
pydantic = "^2.0"
typing-extensions = "^4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0"
ruff = "^0.1.0"
mypy = "^1.7"
types-httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
